--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "jquery": "^3.6.0"
   }
 }
